Thu Aug 13 22:43:00 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * java/jms/README:
        * java/jms/src/org/opendds/jms/qos/ParticipantQosPolicy.java:
        * java/jms/src/org/opendds/jms/qos/PublisherQosPolicy.java:
        * java/jms/src/org/opendds/jms/qos/SubscriberQosPolicy.java:

          Enabled support for ENTITY_FACTORY QoS.

Thu Aug 13 22:17:02 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * bin/DCPS/CPPTemplate.pm:
        * bin/DCPS/HTemplate.pm:
        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/InstanceState.h:
        * dds/DCPS/InstanceState.inl:
        * dds/DCPS/InstanceState.cpp:
        * dds/DCPS/Qos_Helper.inl:
        * dds/DCPS/SubscriptionInstance.h:

          Added support for READER_DATA_LIFECYCLE.

Thu Aug 13 19:01:44 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/PublisherImpl.cpp:

          Re-enabled unregister on delete for scoreboard testing.

        * dds/DCPS/Qos_Helper.inl:

          Added missing validation checks for WRITER_DATA_LIFECYCLE.

        * tests/DCPS/FooTest3_0/PubDriver.cpp:
        * tests/DCPS/FooTest3_0/SimpleDataReader.cpp:
        * tests/DCPS/FooTest3_0/run_test.pl:

          Fixed failing scoreboard test; merged with previous commit.
          autodispose_unregistered_instances must be set to false for
          meaningful results in this test.

Thu Aug 13 17:09:18 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        * tests/DCPS/FooTest3_0/SimpleDataReader.cpp:

          Added message_id_ debug info.

        * tests/DCPS/FooTest3_0/run_test.pl:

          Added one more expected message as the writer_data_lifecycle
          qos was supported now. The default
          autodispose_unregistered_instances is 1 which add dispose
          message upon unregister_instance() call.

Thu Aug 13 04:41:21 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/DataReaderImpl.h: